updates to flags and createds

--- a/salt_cfg/cloud.profiles.d/cedw.conf
+++ b/salt_cfg/cloud.profiles.d/cedw.conf
@@ -19,6 +19,7 @@ cedw:
       - util.python_deps
       - grains
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
