--- a/salt_cfg/cloud.profiles.d/ea.conf
+++ b/salt_cfg/cloud.profiles.d/ea.conf
@@ -19,6 +19,7 @@ ea:
       SourceDestCheck: False
   minion:
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
