--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -16,6 +16,7 @@ ns-master:
   extends: nameserver
   minion:
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
@@ -73,6 +74,7 @@ ns-slave:
   extends: nameserver
   minion:
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
@@ -102,6 +104,7 @@ ns2-nminc:
   extends: nameserver
   minion:
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
