--- a/salt_cfg/cloud.profiles.d/nat.conf
+++ b/salt_cfg/cloud.profiles.d/nat.conf
@@ -6,6 +6,7 @@ nat:
   minion:
     master: salt.nminc.co.
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
