--- a/salt_cfg/cloud.profiles.d/openmbee.conf
+++ b/salt_cfg/cloud.profiles.d/openmbee.conf
@@ -14,6 +14,7 @@ openmbee:
     - jms-external
   minion:
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
@@ -24,6 +25,6 @@ openmbee:
       ALFRESCO_VERSION: 4.2.e
       ALFRESCO_LICENSE_TYPE: community
       ALERT_EMAIL: cgaley@nomagic.com
-      MMS_RELEASE_VERSION: 2.2
+      MMS_RELEASE_VERSION: 2.2.1
       MMS_INSTALLED: False
-      MMS_RELEASE_INSTALLED: 2.1
+      MMS_RELEASE_INSTALLED:
