--- a/salt_cfg/cloud.profiles.d/salt.conf
+++ b/salt_cfg/cloud.profiles.d/salt.conf
@@ -13,6 +13,7 @@ salt:
     - salt-master-internal
   minion:
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
