--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -24,6 +24,7 @@ teamwork:
       - util.python_deps
       - grains
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
