--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -1,11 +1,9 @@
 reactor:
-  - 'salt/cloud/*/created':
-    - /srv/reactor/test.sls
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
   - 'salt/minion/*/start':
     - /srv/reactor/sync_all.sls
     - /srv/reactor/auth-complete.sls
   - 'salt/cloud/*/destroyed':
-    - /srv/reactor/test.sls
+    - /srv/reactor/decommission.sls
 
