add test profile

--- a/salt_cfg/cloud.profiles.d/test.conf
+++ b/salt_cfg/cloud.profiles.d/test.conf
@@ -10,7 +10,6 @@ salt:
   subnetId: subnet-d37fa7a4
   securitygroup:
     - salt-minion-internal
-    - salt-master-internal
     - ssh-internal
   minion:
     grains:
@@ -19,6 +18,5 @@ salt:
       nodename: ''
       domain: ''
       farm_role_index: 1
-      node_type: salt
-      node_env: base
-  
+      node_type: test
+      node_env: test
