adding new tests and reactor configs

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -4,6 +4,12 @@ reactor:
   - 'salt/minion/*/start':
     - /srv/reactor/sync_all.sls
     - /srv/reactor/auth-complete.sls
+  - 'salt/cloud/*/created':
+    - /srv/reactor/created.sls
   - 'salt/cloud/*/destroyed':
     - /srv/reactor/decommission.sls
+  - 'mine/test/start':
+    - /srv/reactor/auth-complete.sls
+  - 'mine/test/created':
+    - /srv/reactor/created.sls
 
