fix test profile

--- a/salt_cfg/cloud.profiles.d/test.conf
+++ b/salt_cfg/cloud.profiles.d/test.conf
@@ -1,4 +1,4 @@
-salt:
+test:
   provider: nminc_aws
   image: ami-96a818fe
   size: t2.medium
@@ -8,9 +8,13 @@ salt:
     Ebs.VolumeType: gp2
   ssh_username: centos
   subnetId: subnet-d37fa7a4
-  securitygroup:
-    - salt-minion-internal
-    - ssh-internal
+  network_interfaces:
+    - DeviceIndex: 0
+      SubnetId: subnet-d37fa7a4 #Specify your VPC Subnet
+      SourceDestCheck: False #Set to True if not using nat routing
+      SecurityGroupId: #Follow Instructions in README.md to create the proper AWS security groups
+        - sg-31509856 #ssh-internal
+        - sg-10509877 #salt-minion-internal
   minion:
     grains:
       init: False
