--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -8,8 +8,8 @@ reactor:
     - /srv/reactor/created.sls
   - 'salt/cloud/*/destroyed':
     - /srv/reactor/decommission.sls
-  - 'mine/test/start':
+  - 'myevents/test/start':
     - /srv/reactor/auth-complete.sls
-  - 'mine/test/created':
+  - 'myevents/test/created':
     - /srv/reactor/created.sls
 
