--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -1,13 +1,13 @@
 reactor:
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
-  - 'salt/minion/*/start':
-    - /srv/reactor/sync_all.sls
-    - /srv/reactor/auth-complete.sls
+ # - 'salt/minion/*/start':
+ #   - /srv/reactor/sync_all.sls
+ #   - /srv/reactor/auth-complete.sls
   - 'salt/cloud/*/created':
-    - /srv/reactor/created.sls
+    - /srv/reactor/test.sls
   - 'salt/cloud/*/destroyed':
-    - /srv/reactor/decommission.sls
+    - /srv/reactor/test.sls
   - 'myevents/test/start':
     - /srv/reactor/auth-complete.sls
   - 'myevents/test/created':
