--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -5,7 +5,7 @@ reactor:
  #   - /srv/reactor/sync_all.sls
  #   - /srv/reactor/auth-complete.sls
   - 'salt/cloud/*/created':
-    - /srv/reactor/created.sls
+    - /srv/reactor/test.sls
   - 'salt/cloud/*/destroyed':
     - /srv/reactor/decommission.sls
   - 'myevents/test/start':
