--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -7,7 +7,7 @@ reactor:
   - 'salt/cloud/*/created':
     - /srv/reactor/test.sls
   - 'salt/cloud/*/destroyed':
-    - /srv/reactor/decommission.sls
+    - /srv/reactor/test.sls
   - 'myevents/test/start':
     - /srv/reactor/auth-complete.sls
   - 'myevents/test/created':
