--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -5,9 +5,9 @@ reactor:
  #   - /srv/reactor/sync_all.sls
  #   - /srv/reactor/auth-complete.sls
   - 'salt/cloud/*/created':
-    - /srv/reactor/test.sls
+    - /srv/reactor/created.sls
   - 'salt/cloud/*/destroyed':
-    - /srv/reactor/test.sls
+    - /srv/reactor/decommission.sls
   - 'myevents/test/start':
     - /srv/reactor/auth-complete.sls
   - 'myevents/test/created':
