--- a/salt_cfg/cloud.profiles.d/nminc-build.conf
+++ b/salt_cfg/cloud.profiles.d/nminc-build.conf
@@ -16,6 +16,7 @@ nminc-build:
     - artifactory-internal
   minion:
     grains:
+      init: False
       farm_name: ''
       nodename: ''
       domain: ''
