complete test cycle

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -1,9 +1,9 @@
 reactor:
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
- # - 'salt/minion/*/start':
- #   - /srv/reactor/sync_all.sls
- #   - /srv/reactor/auth-complete.sls
+  - 'salt/minion/*/start':
+    - /srv/reactor/sync_all.sls
+    - /srv/reactor/auth-complete.sls
   - 'salt/cloud/*/created':
     - /srv/reactor/created.sls
   - 'salt/cloud/*/destroyed':
