--- a/salt_cfg/master.d/environments.conf
+++ b/salt_cfg/master.d/environments.conf
@@ -2,6 +2,9 @@ file_roots:
   base:
     - /srv/salt
     - /srv/large_files_store
+  test:
+    - /srv/test
+    - /srv/large_files_store/test
   engineer:
     - /srv/salt/engineer
     - /srv/large_files_store/engineer
