working on reactor

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -3,9 +3,12 @@ reactor:
     - /srv/reactor/auth-pending.sls
   #- 'salt/minion/*/start':
   #  - /srv/reactor/sync_all.sls
-  #  - /srv/reactor/auth-complete.sls
+  #  - /srv/reactor/highstate.sls
   - 'salt/cloud/*/created':
-    - /srv/reactor/created.sls
+    - /srv/reactor/initialize.sls
+    - /srv/reactor/sync_all.sls
+    - /srv/reactor/grains.sls
+    - /srv/reactor/update_domain.sls
   - 'salt/cloud/*/destroyed':
     - /srv/reactor/decommission.sls
   - 'myevents/test/start':
