--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -4,7 +4,7 @@ nameserver:
   ssh_username: centos
   rename_on_destroy: True
   minion:
-    master: salt.nminc.co.
+    master: 172.31.36.15
   size: t2.small
   block_device_mappings:
     DeviceName: /dev/sda1
