error user teamwork

--- a/salt_cfg/cloud.profiles.d/teamwork.conf
+++ b/salt_cfg/cloud.profiles.d/teamwork.conf
@@ -33,7 +33,9 @@ teamwork:
       node_env: prod
       JAVA_VERSION: Oracle8
       MAGICDRAW_VERSION: 182
+      MAGICDRAW_UPGRADE: 182
       TEAMWORK_LIC_INSTALLED: False
+      TEAMWORK_UPGRADE: False
       VNC_CONFIGURED: False
       vnc_user: teamwork
       vnc_group: teamwork
