rewrite of reactor system

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -1,20 +1,19 @@
 reactor:
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
-  #- 'salt/minion/*/start':
-  #  - /srv/reactor/sync_all.sls
-  #  - /srv/reactor/highstate.sls
+  - 'salt/minion/*/start':
+    - /srv/reactor/sync_all.sls
+    - /srv/reactor/highstate.sls
   - 'salt/cloud/*/created':
     - /srv/reactor/initialize.sls
-    - /srv/reactor/sync_all.sls
-    - /srv/reactor/grains.sls
-    - /srv/reactor/update_domain.sls
   - 'salt/cloud/*/destroyed':
     - /srv/reactor/decommission.sls
-  - 'myevents/test/start':
-    - /srv/reactor/auth-complete.sls
-  - 'myevents/test/created':
-    - /srv/reactor/created.sls
-  - 'myevents/test/test':
-    - /srv/reactor/test.sls
+  - 'init/*/prereq_complete':
+    - /srv/reactor/grains.sls
+  - 'init/*/grains_complete':
+    - /srv/reactor/mine.sls
+  - 'init/*/mine_complete':
+    - /srv/reactor/domain.sls
+  - 'init/*/domain_complete':
+    - /srv/reactor/sync_all.sls
 
