--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -16,6 +16,6 @@ reactor:
     - /srv/reactor/domain.sls
   - 'init/*/domain_complete':
     - /srv/reactor/sync_all.sls
-  - 'init'/*/sync_complete':
+  - 'init/*/sync_complete':
     - /srv/reactor/finalize_init.sls
 
