--- a/salt_cfg/cloud.profiles.d/test.conf
+++ b/salt_cfg/cloud.profiles.d/test.conf
@@ -16,6 +16,7 @@ test:
         - sg-31509856 #ssh-internal
         - sg-10509877 #salt-minion-internal
   minion:
+    master: salt.nminc.co.
     grains:
       init: False
       farm_name: ''
