--- a/salt_states/salt/teamwork/files/teamwork.service
+++ b/salt_states/salt/teamwork/files/teamwork.service
@@ -7,7 +7,7 @@ After=network.target
 User=teamwork
 Group=teamwork
 WorkingDirectory=/opt/local/teamwork/
-ExecStart=/opt/local/teamwork/bin/teamwork_server NOGUI SERVICE
+ExecStart=/opt/local/teamwork/bin/teamwork_server NOGUI
 ExecStop=/opt/local/teamwork/bin/stop_teamwork_server
 
 StandardOutput=syslog
