--- a/salt_cfg/cloud.profiles.d/test.conf
+++ b/salt_cfg/cloud.profiles.d/test.conf
@@ -17,6 +17,7 @@ test:
         - sg-10509877 #salt-minion-internal
   minion:
     master: salt.nminc.co.
+    startup_states:
     grains:
       init: False
       farm_name: ''
