updates to reactor system

--- a/salt_cfg/cloud.profiles.d/nameserver.conf
+++ b/salt_cfg/cloud.profiles.d/nameserver.conf
@@ -44,6 +44,9 @@ ns-master:
         at:
           type: PTR
           value: www.nminc.co.
+        fibocc:
+          type: A
+          value: 52.2.99.123
   network_interfaces:
     - DeviceIndex: 0
       #auto assign public ip (not EIP)
