updates to reactor

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -1,6 +1,8 @@
 reactor:
   - 'salt/auth':
     - /srv/reactor/auth-pending.sls
+  - 'minion_start':
+    - /srv/reactor/initialize.sls
   - 'salt/minion/*/start':
     - /srv/reactor/sync_all.sls
     - /srv/reactor/highstate.sls
