--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -3,7 +3,7 @@ reactor:
     - /srv/reactor/auth-pending.sls
   - 'salt/minion/*/start':
     - /srv/reactor/sync_all.sls
-    - /srv/reactor/highstate.sls
+    - /srv/reactor/start.sls
   - 'salt/cloud/*/destroyed':
     - /srv/reactor/decommission.sls
   - 'init/*/prereq_complete':
