changes to new software version

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -4,6 +4,10 @@ reactor:
     - /srv/reactor/start.sls
   - 'salt/cloud/*/destroyed':
     - /srv/reactor/decommission.sls
+  - 'init/*/new':
+    - /srv/reactor/initialize.sls
+  - 'init/*/existing':
+    - /srv/reactor/highstate.sls
   - 'init/*/prereq_complete':
     - /srv/reactor/grains.sls
   - 'init/*/grains_complete':
