editing highstate file name for debug

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -7,7 +7,7 @@ reactor:
   - 'init/*/new':
     - /srv/reactor/initialize.sls
   - 'init/*/existing':
-    - /srv/reactor/highstate.sls
+    - /srv/reactor/highstate1.sls
   - 'init/*/prereq_complete':
     - /srv/reactor/grains.sls
   - 'init/*/grains_complete':
