adding mine sync functions

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -13,6 +13,7 @@ reactor:
   - 'init/*/grains_complete':
     - /srv/reactor/mine.sls
   - 'init/*/mine_complete':
+    - /srv/reactor/mine_sync.sls
     - /srv/reactor/domain.sls
   - 'init/*/domain_complete':
     - /srv/reactor/finalize_init.sls
