final tweaks to test scripts

--- a/salt_cfg/master.d/reactor.conf
+++ b/salt_cfg/master.d/reactor.conf
@@ -17,5 +17,7 @@ reactor:
     - /srv/reactor/domain.sls
   - 'init/*/domain_complete':
     - /srv/reactor/finalize_init.sls
-    
+  - 'init/*/init_complete':
+    - /srv/reactor/sync_all.sls
+    - /srv/reactor/start.sls
 
