--- a/salt_cfg/cloud.profiles.d/ea.conf
+++ b/salt_cfg/cloud.profiles.d/ea.conf
@@ -33,5 +33,5 @@ ea:
       MMS_RELEASE_VERSION: 2.3.1
       MMS_INSTALLED: False
       MMS_RELEASE_INSTALLED: ''
-      ARTIFACTORY_HOME: https://build.nminc.co:8443/artifactory
+      ARTIFACTORY_HOME: https://build.nminc.co/artifactory
       LDAP: ldap-ad
