--- a/salt_cfg/cloud.profiles.d/ea.conf
+++ b/salt_cfg/cloud.profiles.d/ea.conf
@@ -27,7 +27,7 @@ ea:
       node_env: prod
       JAVA_VERSION: 8
       farm_role_index: 1
-      ALFRESCO_VERSION: 4.2.e
+      ALFRESCO_VERSION: 4.2.f
       ALFRESCO_LICENSE_TYPE: community
       ALERT_EMAIL: cgaley@nomagic.com
       MMS_RELEASE_VERSION: 2.3.1
