--- a/salt_cfg/cloud.profiles.d/ea.conf
+++ b/salt_cfg/cloud.profiles.d/ea.conf
@@ -27,10 +27,10 @@ ea:
       node_env: prod
       JAVA_VERSION: 8
       farm_role_index: 1
-      ALFRESCO_VERSION: 4.2.f
+      ALFRESCO_VERSION: 4.2.e
       ALFRESCO_LICENSE_TYPE: community
       ALERT_EMAIL: cgaley@nomagic.com
-      MMS_RELEASE_VERSION: 2.3.1
+      MMS_RELEASE_VERSION: 2.3.7
       MMS_INSTALLED: False
       MMS_RELEASE_INSTALLED: ''
       ARTIFACTORY_HOME: https://build.nminc.co/artifactory
