adding configure MMSDB

--- a/salt_cfg/cloud.profiles.d/ea.conf
+++ b/salt_cfg/cloud.profiles.d/ea.conf
@@ -32,6 +32,7 @@ ea:
       ALERT_EMAIL: cgaley@nomagic.com
       MMS_RELEASE_VERSION: 2.3.7
       MMS_INSTALLED: False
+      MMS_DB_INSTALLED: False
       MMS_RELEASE_INSTALLED: ''
       ARTIFACTORY_HOME: https://build.nminc.co/artifactory
       LDAP: ldap-ad
